--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "turbo": "latest",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "prettier": "^3.0.0",
+    "turbo": "latest",
     "typescript": "^5.0.0"
   },
   "packageManager": "yarn@1.22.19"
-} 
+}
